libstream-perl (0.9.6) UNRELEASED; urgency=low

  * Stream::In::Role::ShiftAsScalar and Stream::In::Role::ShiftAsList roles
  * Stream::Role::Clone

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 26 Nov 2010 18:53:29 +0300

libstream-perl (0.9.5) unstable; urgency=low

  * storage generated with Stream::Formatter now inherits ClientList role from
    underlying storage
  * Stream::Filter::FilteredIn propagates Shift role

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 11 Nov 2010 19:01:48 +0300

libstream-perl (0.9.4) unstable; urgency=low

  * Stream::Base: 'cap', 'caps', 'class_caps' methods removed
  * Stream::File implements lag
  * build using ppb-native.mk

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 01 Nov 2010 22:13:51 +0300

libstream-perl (0.9.3) unstable; urgency=low

  * Stream::Catalog::Plugin::File - correctly handle cross-namespace name
    collisions

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 27 Oct 2010 20:41:41 +0400

libstream-perl (0.9.2) unstable; urgency=low

  * Stream::File::Cursor: reassociation with new file causes warn instead of
    croak

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 21 Oct 2010 00:17:31 +0400

libstream-perl (0.9.1) unstable; urgency=low

  * Stream::File: don't break posfile when commiting after reading incomplete
    line

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 01 Sep 2010 16:40:29 +0400

libstream-perl (0.9.0) unstable; urgency=low

  * 'does' method in Stream::Base - not Moose yet, but at least we'll get roles
  * Stream::Mixin::Filterable renamed to Stream::In::Role::Filterable,
    Stream::Mixin::Lag renamed to Stream::In::Role::Lag,
    Stream::Mixin::Shift renamed to Stream::In::Role::Shift
  * Stream::Storage::Role::ClientList role
  * Stream::File implements ClientList role
